--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,12 @@
 .todo{
   margin: 20px 0 0 20px;
 }
+
+.footer{
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(224, 225, 236);
+  text-align: center;
+
+}
