--- a/src/components/item.css
+++ b/src/components/item.css
@@ -6,7 +6,7 @@
  border: 1px solid rgb(192, 190, 190);
  padding: 0px 10px 10px 10px;
  margin-bottom: 10px;
- 
+ background-color: white;
 }
 
 h5, 
